# kaggle-capstone-ai-agents

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
agents/: concierge.py  concierge_tools.py  custom_agent_tool.py  model.py  planner.py  prediction.py  prior.py  skill_loader.py  weather.py
agents/concierge/: agent.py  instruction.md
agents/prediction/: agent.py  instruction.md
agents/prior/: agent.py
agents/weather/: agent.py  instruction.md
app/: cli.py
common/: config.py  contracts.py
data/: train_model.py
docs/: DESIGN.md  MVP1_BUILD.md  capstone_project_proposals.md
eval/: backtest.py
mcp_servers/metarmcp/: README.md  VENDORED.md  pyproject.toml  server.py
playground/: agent.py
scripts/: prewarm.py
skills/concierge/: SKILL.md
skills/planner/: SKILL.md
skills/prediction/: SKILL.md
skills/prior/: SKILL.md
skills/weather/: SKILL.md
tests/integration/: test_agent.py  test_server_e2e.py
tests/unit/: test_concierge_tools.py
